--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.8.5",
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
     "fastify-formbody": "^2.0.0",
